Added Gson configuration and dependancy in Controller tests